--- a/proactive-education-assistant/src/locales/hi/translation.json
+++ b/proactive-education-assistant/src/locales/hi/translation.json
@@ -606,6 +606,118 @@
     "sent_invitations": "भेजे गए निमंत्रण",
     "no_sent_invite": "कोई लंबित भेजे गए निमंत्रण नहीं",
     "awaiting_acceptance": "स्वीकृति की प्रतीक्षा में"
+  },
+  "landing_page": {
+    "brand_initials": "ईएस",
+    "brand_name": "एड्यूशील्ड",
+    "nav": {
+      "sign_in": "साइन इन",
+      "get_started": "शुरू करें"
+    },
+    "hero": {
+      "badge": "व्याख्यात्मक AI जोखिम इंजन",
+      "title_prefix": "ड्रॉपआउट का पूर्वानुमान लगाएं",
+      "title_highlight": "पहले",
+      "title_suffix": "कि वे हों।",
+      "subtitle": "स्कूलों, एनजीओ और ग्रामीण शिक्षा कार्यक्रमों के लिए AI-संचालित प्रारंभिक चेतावनी प्रणाली।",
+      "start_free": "मुफ्त शुरू करें",
+      "highlights": {
+        "realtime": "रियल-टाइम जोखिम पूर्वानुमान",
+        "offline": "ग्रामीण क्षेत्रों के लिए ऑफलाइन-फर्स्ट",
+        "interventions": "कार्रवाई योग्य हस्तक्षेप अंतर्दृष्टि"
+      }
+    },
+    "problem": {
+      "badge": "चुनौती",
+      "title": "स्कूलों के सामने समस्या"
+    },
+    "problems": {
+      "missed_signals_title": "ड्रॉपआउट संकेत छूट जाते हैं",
+      "missed_signals_desc": "शिक्षक प्रतिदिन 40+ छात्रों को मैन्युअल रूप से ट्रैक नहीं कर सकते। शुरुआती चेतावनी संकेत देर होने तक अनदेखे रह जाते हैं।",
+      "scattered_data_title": "रजिस्टर और शीट्स में बिखरा डेटा",
+      "scattered_data_desc": "उपस्थिति, अंक और व्यवहार डेटा अलग-अलग जगहों पर होता है, जिसमें एकीकृत दृश्य या रुझान विश्लेषण नहीं होता।",
+      "no_intervention_title": "प्रारंभिक हस्तक्षेप प्रणाली का अभाव",
+      "no_intervention_desc": "कार्रवाई योग्य अलर्ट के बिना, अच्छे इरादों वाले शिक्षकों के पास छात्र के ड्रॉपआउट से पहले हस्तक्षेप की कोई संरचित प्रक्रिया नहीं होती।"
+    },
+    "solution": {
+      "badge": "समाधान",
+      "title": "एड्यूशील्ड कैसे काम करता है",
+      "subtitle": "एक सरल तीन-चरणीय प्रक्रिया — कक्षा के कच्चे डेटा से समय पर शिक्षक कार्रवाई तक।"
+    },
+    "steps": {
+      "collect_data_title": "डेटा एकत्र करें",
+      "collect_data_desc": "उपस्थिति, अंक और व्यवहार इनपुट — मोबाइल पर ऑफलाइन भी।",
+      "ai_trends_title": "AI रुझानों का विश्लेषण करता है",
+      "ai_trends_desc": "हमारा व्याख्यात्मक AI इंजन प्रत्येक छात्र के ड्रॉपआउट जोखिम को रियल-टाइम में स्कोर करता है।",
+      "act_early_title": "शिक्षक जल्दी कार्रवाई करते हैं",
+      "act_early_desc": "देर होने से पहले लक्षित हस्तक्षेप सुझाव प्राप्त करें।"
+    },
+    "preview": {
+      "badge": "लाइव पूर्वावलोकन",
+      "title": "जोखिम बुद्धिमत्ता को क्रियान्वित होते देखें",
+      "dashboard_header": "एड्यूशील्ड डैशबोर्ड — कक्षा 9बी",
+      "risk_overview": "जोखिम अवलोकन",
+      "risk_high": "उच्च",
+      "risk_medium": "मध्यम",
+      "risk_low": "निम्न",
+      "attendance_trend": "उपस्थिति रुझान",
+      "active_alerts": "सक्रिय अलर्ट",
+      "alert_1": "आरव ने पिछली 10 में से 8 कक्षाएं छोड़ीं",
+      "alert_2": "राहुल के गणित अंक 22 अंक घटे",
+      "alert_3": "देव में सहभागिता घटने का पैटर्न",
+      "students": {
+        "aarav": "आरव शाह",
+        "priya": "प्रिया नायर",
+        "rahul": "राहुल वर्मा",
+        "sana": "सना शेख",
+        "dev": "देव पाटिल"
+      },
+      "weeks": {
+        "w1": "स1",
+        "w2": "स2",
+        "w3": "स3",
+        "w4": "स4",
+        "w5": "स5",
+        "w6": "स6",
+        "w7": "स7"
+      }
+    },
+    "features": {
+      "badge": "हम क्या प्रदान करते हैं",
+      "title": "वास्तविक कक्षाओं के लिए निर्मित",
+      "risk_analytics_title": "जोखिम विश्लेषण",
+      "risk_analytics_desc": "हर छात्र के लिए त्वरित दृश्य जोखिम स्कोरिंग",
+      "class_management_title": "कक्षा प्रबंधन",
+      "class_management_desc": "कक्षाएं, विषय और छात्र डेटा व्यवस्थित करें",
+      "smart_insights_title": "स्मार्ट अंतर्दृष्टि",
+      "smart_insights_desc": "उपस्थिति और स्कोर गिरावट के लिए AI-आधारित अलर्ट",
+      "offline_first_title": "ऑफलाइन-फर्स्ट",
+      "offline_first_desc": "इंटरनेट के बिना काम करता है, ऑनलाइन होने पर सिंक करता है"
+    },
+    "impact": {
+      "badge": "हमारा प्रभाव",
+      "title": "मापने योग्य परिणाम",
+      "earlier_detection": "जोखिम की पहले पहचान",
+      "faster_response": "तेज हस्तक्षेप प्रतिक्रिया",
+      "offline_compatibility": "ऑफलाइन संगतता"
+    },
+    "accessibility": {
+      "badge": "समावेशी डिज़ाइन",
+      "title": "वास्तविक कक्षाओं के लिए निर्मित",
+      "subtitle": "हर जगह काम करने के लिए डिज़ाइन किया गया — शहरी स्कूलों से लेकर दूरदराज़ ग्रामीण क्षेत्रों तक।",
+      "offline_first": "ऑफलाइन-फर्स्ट",
+      "multilingual": "बहुभाषी",
+      "accessible": "सुलभ",
+      "low_data_mode": "लो डेटा मोड"
+    },
+    "cta": {
+      "badge": "आज ही शुरू करें",
+      "title": "आज ही छात्रों की सुरक्षा शुरू करें।",
+      "subtitle": "सैकड़ों स्कूल और एनजीओ एड्यूशील्ड का उपयोग कर रहे हैं ताकि छात्र वहीं रहें जहाँ वे होने चाहिए — कक्षा में।",
+      "create_account": "स्कूल खाता बनाएं",
+      "book_demo": "डेमो बुक करें"
+    },
+    "footer": "© 2026 एड्यूशील्ड — शिक्षकों के लिए, शिक्षकों द्वारा निर्मित"
   }
 }
 
