--- a/proactive-education-assistant/src/locales/mr/translation.json
+++ b/proactive-education-assistant/src/locales/mr/translation.json
@@ -606,5 +606,117 @@
     "sent_invitations": "पाठविलेले आमंत्रण",
     "no_sent_invite": "कोणतेही प्रलंबित पाठविलेले आमंत्रण नाही",
     "awaiting_acceptance": "स्वीकृतीच्या प्रतीक्षेत"
+  },
+  "landing_page": {
+    "brand_initials": "ईएस",
+    "brand_name": "एडुशील्ड",
+    "nav": {
+      "sign_in": "साइन इन",
+      "get_started": "सुरू करा"
+    },
+    "hero": {
+      "badge": "स्पष्टीकरणीय AI जोखीम इंजिन",
+      "title_prefix": "ड्रॉपआउटचा अंदाज लावा",
+      "title_highlight": "आधी",
+      "title_suffix": "ते घडण्यापूर्वी.",
+      "subtitle": "शाळा, स्वयंसेवी संस्था आणि ग्रामीण शिक्षण कार्यक्रमांसाठी AI-आधारित लवकर चेतावणी प्रणाली.",
+      "start_free": "मोफत सुरू करा",
+      "highlights": {
+        "realtime": "रीअल-टाइम जोखीम अंदाज",
+        "offline": "ग्रामीण भागासाठी ऑफलाइन-फर्स्ट",
+        "interventions": "कृतीक्षम हस्तक्षेप अंतर्दृष्टी"
+      }
+    },
+    "problem": {
+      "badge": "आव्हान",
+      "title": "शाळांसमोरील समस्या"
+    },
+    "problems": {
+      "missed_signals_title": "ड्रॉपआउट संकेत दुर्लक्षित होतात",
+      "missed_signals_desc": "शिक्षक दररोज 40+ विद्यार्थ्यांचे हाताने निरीक्षण करू शकत नाहीत. सुरुवातीचे इशारे उशीर होईपर्यंत दिसत नाहीत.",
+      "scattered_data_title": "नोंदवही आणि शीट्समध्ये विखुरलेला डेटा",
+      "scattered_data_desc": "उपस्थिती, गुण आणि वर्तन डेटा वेगवेगळ्या ठिकाणी असतो; एकत्रित दृश्य किंवा ट्रेंड विश्लेषण नसते.",
+      "no_intervention_title": "लवकर हस्तक्षेप प्रणाली नाही",
+      "no_intervention_desc": "कृतीक्षम अलर्ट नसल्यामुळे, चांगल्या हेतूचे शिक्षक विद्यार्थी ड्रॉपआउट होण्यापूर्वी संरचित हस्तक्षेप करू शकत नाहीत."
+    },
+    "solution": {
+      "badge": "उपाय",
+      "title": "एडुशील्ड कसे काम करते",
+      "subtitle": "साधी तीन-टप्प्यांची प्रक्रिया — कच्च्या वर्गमाहितीतून वेळेवर शिक्षक कृतीपर्यंत."
+    },
+    "steps": {
+      "collect_data_title": "डेटा संकलित करा",
+      "collect_data_desc": "उपस्थिती, गुण आणि वर्तन इनपुट — मोबाईलवर ऑफलाइनही.",
+      "ai_trends_title": "AI ट्रेंडचे विश्लेषण करते",
+      "ai_trends_desc": "आमचे स्पष्टीकरणीय AI इंजिन प्रत्येक विद्यार्थ्याच्या ड्रॉपआउट जोखीमचे रीअल-टाइम स्कोरिंग करते.",
+      "act_early_title": "शिक्षक लवकर कृती करतात",
+      "act_early_desc": "उशीर होण्यापूर्वी लक्षित हस्तक्षेप शिफारसी मिळवा."
+    },
+    "preview": {
+      "badge": "लाईव्ह पूर्वावलोकन",
+      "title": "जोखीम बुद्धिमत्ता प्रत्यक्षात पहा",
+      "dashboard_header": "एडुशील्ड डॅशबोर्ड — वर्ग 9B",
+      "risk_overview": "जोखीम आढावा",
+      "risk_high": "उच्च",
+      "risk_medium": "मध्यम",
+      "risk_low": "कमी",
+      "attendance_trend": "उपस्थिती ट्रेंड",
+      "active_alerts": "सक्रिय अलर्ट",
+      "alert_1": "आरवने शेवटच्या 10 पैकी 8 वर्ग चुकवले",
+      "alert_2": "राहुलच्या गणित गुणांमध्ये 22 गुणांची घट",
+      "alert_3": "देवमध्ये सहभाग कमी होण्याचा पॅटर्न",
+      "students": {
+        "aarav": "आरव शाह",
+        "priya": "प्रिया नायर",
+        "rahul": "राहुल वर्मा",
+        "sana": "सना शेख",
+        "dev": "देव पाटील"
+      },
+      "weeks": {
+        "w1": "आ1",
+        "w2": "आ2",
+        "w3": "आ3",
+        "w4": "आ4",
+        "w5": "आ5",
+        "w6": "आ6",
+        "w7": "आ7"
+      }
+    },
+    "features": {
+      "badge": "आम्ही काय देतो",
+      "title": "खऱ्या वर्गखोल्यांसाठी तयार",
+      "risk_analytics_title": "जोखीम विश्लेषण",
+      "risk_analytics_desc": "प्रत्येक विद्यार्थ्यासाठी तत्काळ दृश्य जोखीम स्कोरिंग",
+      "class_management_title": "वर्ग व्यवस्थापन",
+      "class_management_desc": "वर्ग, विषय आणि विद्यार्थी डेटा व्यवस्थित करा",
+      "smart_insights_title": "स्मार्ट अंतर्दृष्टी",
+      "smart_insights_desc": "उपस्थिती आणि गुण घटल्यावर AI-आधारित अलर्ट",
+      "offline_first_title": "ऑफलाइन-फर्स्ट",
+      "offline_first_desc": "इंटरनेटशिवाय काम करते, ऑनलाइन झाल्यावर सिंक होते"
+    },
+    "impact": {
+      "badge": "आमचा प्रभाव",
+      "title": "मोजता येणारे परिणाम",
+      "earlier_detection": "जोखीमची लवकर ओळख",
+      "faster_response": "जलद हस्तक्षेप प्रतिसाद",
+      "offline_compatibility": "ऑफलाइन सुसंगतता"
+    },
+    "accessibility": {
+      "badge": "समावेशक डिझाइन",
+      "title": "खऱ्या वर्गखोल्यांसाठी तयार",
+      "subtitle": "शहरी शाळांपासून ते अतिदुर्गम ग्रामीण भागापर्यंत — सर्वत्र काम करण्यासाठी डिझाइन केलेले.",
+      "offline_first": "ऑफलाइन-फर्स्ट",
+      "multilingual": "बहुभाषिक",
+      "accessible": "सुगम",
+      "low_data_mode": "लो डेटा मोड"
+    },
+    "cta": {
+      "badge": "आजच सुरू करा",
+      "title": "आजच विद्यार्थ्यांचे संरक्षण सुरू करा.",
+      "subtitle": "विद्यार्थी वर्गात टिकून राहावेत यासाठी शेकडो शाळा आणि स्वयंसेवी संस्था एडुशील्ड वापरत आहेत.",
+      "create_account": "शाळेचे खाते तयार करा",
+      "book_demo": "डेमो बुक करा"
+    },
+    "footer": "© 2026 एडुशील्ड — शिक्षकांसाठी, शिक्षकांनी तयार केलेले"
   }
 }
